@@ -40,13 +40,13 @@ Legend	Change	Details	Comments
 	None	T  :	Testsuite changes.
 		D  :    Documentation updates.
 
-                                Tcllib 1.8      Tcllib 1.9
+                                Tcllib 1.9      Tcllib 1.10
 Module          Package         Old version     New Version     Comments
 ------          -------         -----------     -----------     ---------------
 asn		asn                0.7		0.8.1   	D, B
 base64		uuencode           1.1.3	1.1.4   	B, D
 ------          -------         -----------     -----------     ---------------
-bench		bench              0.1		0.2     	EF, D, B
+bench		bench              0.1		0.3     	EF, D, B
 		bench::out::csv    0.1.1        0.1.2   	B
 		bench::out::text   0.1.1        0.1.2   	B
 ------          -------         -----------     -----------     ---------------
